# GTopia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: CMakeLists.txt  GameServer.cmake  ItemManager.cmake  Master.cmake  Source.cmake  WorldRenderer.cmake
Configs/: achievements.txt  battle_pet_data.txt  config.txt  consumable_data.txt  gtopia.sql  playmods.txt  roles.txt  servers.txt  store.txt  telnet_config.txt
GameServer/: CMakeLists.txt  Context.cpp  Context.h  Main.cpp
GameServer/Command/: AgeWorld.cpp  AgeWorld.h  CommandBase.h  Emotes.cpp  Emotes.h  Ghost.cpp  GiveItem.cpp  Magic.cpp  RenderWorld.cpp  TogglePlayMod.cpp
GameServer/Event/TCP/: TCPEventAuth.cpp  TCPEventAuth.h  TCPEventCommand.cpp  TCPEventCommand.h  TCPEventHeartBeat.cpp  TCPEventHello.cpp  TCPEventHello.h  TCPEventPlayerSession.cpp  TCPEventPlayerSession.h  TCPEventRenderWorld.cpp  TCPEventRenderWorld.h  TCPEventWorldInit.cpp  TCPEventWorldInit.h  TCPEventWorldSendPlayer.cpp
GameServer/Event/UDP/GameMessage/: Buy.cpp  Buy.h  DialogReturn.cpp  DialogReturn.h  Drop.cpp  Drop.h  EnterGame.cpp  EnterGame.h  GrowID.cpp  GrowID.h  Input.cpp  Input.h  JoinRequest.cpp  JoinRequest.h  Quit.cpp  Quit.h  QuitToExit.cpp  QuitToExit.h  RefreshItemData.cpp  RefreshItemData.h  RefreshTributeData.cpp  RefreshTributeData.h  SetSkin.cpp  SetSkin.h  Store.cpp  Store.h  Trash.cpp  Trash.h  Wrench.cpp  Wrench.h
GameServer/Event/UDP/GamePacket/: ItemActivateRequest.cpp  ObjectActivateRequest.cpp  ObjectActivateRequest.h  State.cpp  TileActivateRequest.cpp  TileActivateRequest.h  TileChangeRequest.cpp
GameServer/Holiday/: AutoHoliday_Comet.cpp  AutoHoliday_Comet.h
GameServer/Player/: AchievementManager.cpp  AchievementManager.h  GamePlayer.cpp  GamePlayer.h  PlayerManager.cpp  PlayerManager.h  PlayerPlayModController.cpp  PlayerPlayModController.h  PlayerProgress.cpp  PlayerProgress.h
GameServer/Player/Dialog/: AchievementBlockDialog.cpp  AchievementBlockDialog.h  BattleCageDialog.cpp  BattleCageDialog.h  DropItemDialog.cpp  DropItemDialog.h  LockDialog.cpp  LockDialog.h  MailboxBlockDialog.cpp  MailboxBlockDialog.h  OuijaBoardDialog.cpp  OuijaBoardDialog.h  PlayerDialog.cpp  RegisterDialog.cpp  RegisterDialog.h  RenderWorldDialog.cpp  RenderWorldDialog.h  SignDialog.cpp  SignDialog.h  TrashDialog.cpp  WrenchSelfDialog.cpp  WrenchSelfDialog.h  XenoniteDialog.cpp  XenoniteDialog.h
GameServer/Server/: GameServer.cpp  GameServer.h  MasterBroadway.cpp  MasterBroadway.h  UserCacheManager.cpp  UserCacheManager.h
GameServer/Store/: StoreManager.cpp  StoreManager.h
GameServer/World/: PetBattleManager.cpp  PetBattleManager.h  World.cpp  World.h  WorldBossManager.cpp  WorldBossManager.h  WorldManager.cpp  WorldManager.h  WorldNPC.cpp  WorldNPC.h  WorldNPCManager.cpp  WorldNPCManager.h
HTTPServer/: main.go
ItemManager/: CMakeLists.txt  Main.cpp
Master/: CMakeLists.txt  Context.cpp  Context.h  Main.cpp
Master/Command/Telnet/: SetRole.cpp
Master/Event/TCP/: TCPEventAuth.cpp  TCPEventAuth.h  TCPEventHello.cpp  TCPEventHello.h  TCPEventKillServer.cpp  TCPEventPlayerEndSession.cpp  TCPEventPlayerSession.cpp  TCPEventRenderWorld.cpp  TCPEventWorldInit.cpp  TCPEventWorldPlayerSession.cpp  TCPEventWorldPlayerSession.h  (+1 more)
Master/Player/: GamePlayer.cpp  GamePlayer.h  PlayerManager.cpp  PlayerManager.h
Master/Server/: GameServer.cpp  GameServer.h  ServerManager.cpp  ServerManager.h  TelnetServer.cpp
Master/World/: WorldManager.cpp  WorldManager.h
Runtime/: kill_servers.bat  kill_servers.sh  run_servers.bat  run_servers.sh
Source/: ContextBase.cpp  ContextBase.h  Precompiled.h
Source/Database/: DatabaseManager.cpp  DatabaseManager.h  DatabasePool.cpp  DatabasePool.h  DatabaseResult.cpp  DatabaseResult.h  DatabaseWorker.cpp  DatabaseWorker.h  PreparedParam.cpp  PreparedParam.h  QueryUtils.cpp  QueryUtils.h
Source/Event/: EventDispatcher.h
Source/Holiday/: AutoHoliday.cpp  AutoHoliday.h  Holiday.h
Source/IO/: File.cpp  File.h  Log.cpp  Log.h
Source/Item/: BattlePetInfo.cpp  BattlePetInfo.h  ItemInfo.cpp  ItemInfo.h  ItemInfoManager.cpp  ItemInfoManager.h  ItemUtils.cpp  ItemUtils.h
Source/Math/: Color.h  Math.h  Random.cpp  Random.h  Rect.h  Vector2.cpp  Vector2.h  Vector3.h  WeightRand.cpp  WeightRand.h
Source/Memory/: MemoryBuffer.cpp  MemoryBuffer.h  RingBuffer.cpp  RingBuffer.h
Source/Network/: ENetServer.cpp  ENetServer.h  NetClient.cpp  NetClient.h  NetEntity.cpp  NetEntity.h  NetHTTP.cpp  NetHTTP.h  NetSocket.cpp  NetSocket.h
Source/OS/: OSPrecompiled.h
Source/Packet/: GamePacket.h  NetPacket.cpp  NetPacket.h  PacketPool.cpp  PacketPool.h  PacketUtils.h  VariantPacket.cpp  VariantPacket.h
Source/Player/: CharacterData.cpp  CharacterData.h  ParticleEffect.h  PlayMod.cpp  PlayMod.h  PlayModManager.cpp  PlayModManager.h  Player.cpp  Player.h  PlayerInventory.cpp  PlayerInventory.h  PlayerLoginDetail.cpp  PlayerLoginDetail.h  PlayerTribute.cpp  PlayerTribute.h  Role.cpp  Role.h  RoleManager.cpp  RoleManager.h
Source/Proton/: ProtonUtils.cpp  ProtonUtils.h
Source/Server/: ServerBase.cpp  ServerBase.h  ServerBroadwayBase.cpp  ServerBroadwayBase.h
Source/Utils/: Base64.cpp  Base64.h  ConfigDB.cpp  ConfigDB.h  DialogBuilder.cpp  DialogBuilder.h  GameConfig.cpp  GameConfig.h  GrowUtils.cpp  GrowUtils.h  ResourceManager.cpp  ResourceManager.h  StringUtils.cpp  StringUtils.h  Timer.cpp  Timer.h  Variant.cpp  Variant.h  ZLibUtils.cpp  ZLibUtils.h
Source/World/: TileExtra.cpp  TileExtra.h  TileInfo.cpp  TileInfo.h  WorldBalancer.cpp  WorldBalancer.h  WorldInfo.cpp  WorldInfo.h  WorldManagerBase.h  WorldObjectManager.cpp  WorldObjectManager.h  WorldTileManager.cpp  WorldTileManager.h
Util/: generate_hash_enums.py  generate_item_data.py  generate_wiki_data.py  item_info_manager.py  setup.py  update_file_hashes.py
WorldRenderer/: CMakeLists.txt  Context.cpp  Main.cpp  MasterBroadway.cpp  MasterBroadway.h  Renderer2D.cpp  Renderer2D.h  WorldRenderer.cpp  WorldRenderer.h  WorldRendererManager.cpp  WorldRendererManager.h  WorldTileLut.h
WorldRenderer/Event/: TCPEventAuth.cpp
(+7 files in other folders)
